Fixing Overflow-x leaking and loading page error

--- a/v2-beta/static/css/a-style.css
+++ b/v2-beta/static/css/a-style.css
@@ -10,7 +10,7 @@ a {
 }
 
 .loader {
-  position: absolute;
+  position: fixed;
   width: 100vw;
   height: 100vh;
   background-color: #1c1c2b;
@@ -100,8 +100,8 @@ html {
 }
 body {
   background-color: #2b292c;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 header {
@@ -161,7 +161,7 @@ nav .container .hamburger {
 nav .container .hamburger .layer {
   width: 100%;
   margin: 3px 0;
-  padding: 2px;
+  padding: 2px 0;
   background-color: white;
 }
 nav .container li:hover, nav .container .hamburger:hover {
