--- a/v2-beta/static/scss/_loader.scss
+++ b/v2-beta/static/scss/_loader.scss
@@ -1,5 +1,5 @@
 .loader{
-    position: absolute;
+    position: fixed;
     width: 100vw;
     height: 100vh;
     background-color: $secondary-color;
