--- a/v2-beta/static/scss/_view.scss
+++ b/v2-beta/static/scss/_view.scss
@@ -19,8 +19,8 @@ html{
 
 body{
     background-color: $third-color;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 header{
@@ -86,7 +86,7 @@ nav{
             .layer{
                 width: 100%;
                 margin: 3px 0;
-                padding: 2px;
+                padding: 2px 0;
                 background-color: white;
             }
         }
